ffi/poc/csharp/src/Corpus/Generated/Abi.cs


[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_WireZoo
{
    public int v_int32;
    public long v_int64;
    public byte v_bool;
    public double v_double;
    public uint v_fixed32;
    public ak_str v_string;
    public ak_str v_bytes;
    public int v_enum;
    public ak_efix_Timestamp v_msg;
    public int v_big_tag;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_WireZoo
{
    public int v_int32;
    public long v_int64;
    public byte v_bool;
    public double v_double;
    public uint v_fixed32;
    public ak_span v_string;
    public ak_span v_bytes;
    public int v_enum;
    public ak_dfix_Timestamp v_msg;
    public int v_big_tag;
    public ak_unk_buf unknown;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_ufix_WireZoo
{
    public int v_int32;
    public long v_int64;
    public byte v_bool;
    public double v_double;
    public uint v_fixed32;
    public ak_str v_string;
    public ak_str v_bytes;
    public int v_enum;
    public ak_ufix_Timestamp v_msg;
    public int v_big_tag;
    public ak_blob unknown;
    public uint presence;
}

/// The presence bits (plan.presence_bits), one per singular message child and per
/// explicit field, in tag order; the same bit in the e, d and u group.
public static class AkPresent
{
    public const uint ResultRaw_created_at = 1u << 0;
    public const uint ResultRaw_completed_at = 1u << 1;
    public const uint TaskOptions_max_duration = 1u << 0;
    public const uint TaskDetailed_options = 1u << 0;
    public const uint TaskDetailed_created_at = 1u << 1;
    public const uint TaskDetailed_submitted_at = 1u << 2;
    public const uint TaskDetailed_started_at = 1u << 3;
    public const uint TaskDetailed_ended_at = 1u << 4;
    public const uint TaskDetailed_pod_ttl = 1u << 5;
    public const uint TaskDetailed_output = 1u << 6;
    public const uint TaskDetailed_received_at = 1u << 7;
    public const uint TaskDetailed_acquired_at = 1u << 8;
    public const uint TaskDetailed_creation_to_end_duration = 1u << 9;
    public const uint TaskDetailed_processing_to_end_duration = 1u << 10;
    public const uint TaskDetailed_received_to_end_duration = 1u << 11;
    public const uint TaskDetailed_processed_at = 1u << 12;
    public const uint TaskDetailed_fetched_at = 1u << 13;
    public const uint TaskSummary_options = 1u << 0;
    public const uint TaskSummary_created_at = 1u << 1;
    public const uint Probe_opt_count = 1u << 0;
    public const uint Probe_opt_label = 1u << 1;
    public const uint Probe_opt_flag = 1u << 2;
    public const uint UploadResultDataMessage_upload = 1u << 0;
    public const uint ChunkElement_inner = 1u << 0;
    public const uint LeafElement_stamp = 1u << 0;
    public const uint Surrogate_nested = 1u << 0;
    public const uint WireZoo_v_msg = 1u << 0;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_Timestamp
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_Timestamp
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_Timestamp*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_Duration
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_Duration
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_Duration*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ResultRaw
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ResultRaw
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ResultRaw*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_TaskOptions
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_options;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_TaskOptions
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_TaskOptions*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_TaskOptionsOptionsEntry*, int, void> add_options;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_TaskOutput
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_TaskOutput
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_TaskOutput*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_TaskDetailed
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_parent_task_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_data_dependencies;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_expected_output_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_retry_of_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_options_options;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_TaskDetailed
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_TaskDetailed*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_parent_task_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_data_dependencies;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_expected_output_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_retry_of_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_TaskOptionsOptionsEntry*, int, void> add_options_options;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_TaskSummary
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_options_options;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_TaskSummary
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_TaskSummary*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_TaskOptionsOptionsEntry*, int, void> add_options_options;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_Probe
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_Probe
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_Probe*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_Empty
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_Empty
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_Empty*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_UploadResultData
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_UploadResultData
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_UploadResultData*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_MetricsBatch
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_ticks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_values;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_codes;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_flags;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_statuses;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_MetricsBatch
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_MetricsBatch*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, long*, int, void> add_ticks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, double*, int, void> add_values;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int*, int, void> add_codes;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, byte*, int, void> add_flags;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int*, int, void> add_statuses;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_Pair
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_Pair
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_Pair*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ListResultsResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_results;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ListResultsResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ListResultsResponse*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_ResultRaw*, int, void> add_results;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ListTasksDetailedResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_tasks;
    public ak_evt_TaskDetailed* elem_tasks;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ListTasksDetailedResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ListTasksDetailedResponse*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long> new_tasks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_TaskDetailed*, void> apply_tasks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_tasks_parent_task_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_tasks_data_dependencies;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_tasks_expected_output_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_tasks_retry_of_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_TaskOptionsOptionsEntry*, int, void> add_tasks_options_options;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ListTaskSummaryResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_tasks;
    public ak_evt_TaskSummary* elem_tasks;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ListTaskSummaryResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ListTaskSummaryResponse*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long> new_tasks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_TaskSummary*, void> apply_tasks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_TaskOptionsOptionsEntry*, int, void> add_tasks_options_options;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ListProbeResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_probes;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ListProbeResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ListProbeResponse*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_Probe*, int, void> add_probes;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ListMetricsResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_batches;
    public ak_evt_MetricsBatch* elem_batches;
}
